[package]
name = "ipfsredis"
version = "0.1.0"
edition = "2021"
authors = ["felix"]
description = "POC to 'make your own Redis' using IFPS libs as network layer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/felixgborrego/ipfs-redis"
readme = "README.md"
keywords = ["redis", "libp2p", "rust"]

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = { version = "1.0.0", features = ["from", "display"] }
clap = { version = "4.5.17", features = ["derive", "unicode"] }
base64 = "0.22.1"
uuid = { version = "1", features = ["v7"] }
libp2p = { version = "0.54.1", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "macros",
] }
